--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Сучасна пекарня</title>
   <!-- styles -->
   <link rel="stylesheet" href="./css/main.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -35,7 +36,7 @@
           </svg>
         </button>
         <div class="mobile-menu">
-          <button class="mobile-menu__btn-close menu-btn-close" type="button">Close</button>
+          <button class="mobile-menu__btn-close menu-btn-close" type="button"></button>
         </div>
       </div>
     </div>
@@ -89,7 +90,7 @@
         </div>
       </div>
     </section>
-    <!--<section class="chefs-section section" id="chefs-section">
+    <section class="chefs-section section" id="chefs-section">
       <div class="container">
         <h2 class="chefs-section__title section__title section__title--centered">
           Наші найкращі <br /><span class="text-brand-dark">шеф-кухарі</span>
@@ -137,54 +138,98 @@
         <h2 class="formats-section__title section__title section__title--centered">
           Формати
         </h2>
-        <div class="formats-section__container">
-          <button class="carusel-button" type="button">
+        <div class="formats-section__slider">
+          <button class="formats-section__button carusel-button prev" type="button">
             <svg width="16" height="16">
               <use href="./images/icons.svg#icon-arrow"></use>
             </svg>
           </button>
-          <ul class="formats-section__list">
-            <li class="formats-section__item">
-              <article class="format-card">
-                <img class="format-card__image" src="./images/walrus-format.jpg" alt="Walrus format" />
-                <h3 class="format-card__title" lang="en">Walrus</h3>
-                <div class="format-card__text">
-                  <p>Площа: до 120 м2</p>
-                  <p>Меню: розширене меню</p>
-                  <p>
-                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                    офіціанти-різнороби
-                  </p>
-                  <p>Посадкові місця: є</p>
-                </div>
-              </article>
-            </li>
-            <li class="formats-section__item">
-              <article class="format-card">
-                <img class="format-card__image" src="./images/horseshoe-format.jpg" alt="Horseshoe format" />
-                <h3 class="format-card__title" lang="en">Horseshoe</h3>
-                <div class="format-card__text">
-                  <p>Площа: до 25 м2</p>
-                  <p>Меню: найпопулярніші позиції меню</p>
-                  <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-                  <p>Посадкові місця: відсутні</p>
-                </div>
-              </article>
-            </li>
-            <li class="formats-section__item">
-              <article class="format-card">
-                <img class="format-card__image" src="./images/handlebar-format.jpg" alt="Handlebar format" />
-                <h3 class="format-card__title" lang="en">Handlebar</h3>
-                <div class="format-card__text">
-                  <p>Площа: до 15 м2</p>
-                  <p>Меню: найпопулярніші позиції меню</p>
-                  <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-                  <p>Посадкові місця: відсутні</p>
-                </div>
-              </article>
-            </li>
-          </ul>
-          <button class="carusel-button next" type="button">
+          <div class="formats-section__container swiper-container">
+            <ul class="formats-section__list swiper-wrapper">
+              <li class="swiper-slide">
+                <article class="format-card">
+                  <img class="format-card__image" src="./images/walrus-format.jpg" alt="Walrus format" />
+                  <h3 class="format-card__title" lang="en">Walrus</h3>
+                  <div class="format-card__text">
+                    <p>Площа: до 120 м2</p>
+                    <p>Меню: розширене меню</p>
+                    <p>
+                      Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                      офіціанти-різнороби
+                    </p>
+                    <p>Посадкові місця: є</p>
+                  </div>
+                </article>
+              </li>
+              <li class="swiper-slide">
+                <article class="format-card">
+                  <img class="format-card__image" src="./images/horseshoe-format.jpg" alt="Horseshoe format" />
+                  <h3 class="format-card__title" lang="en">Horseshoe</h3>
+                  <div class="format-card__text">
+                    <p>Площа: до 25 м2</p>
+                    <p>Меню: найпопулярніші позиції меню</p>
+                    <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                    <p>Посадкові місця: відсутні</p>
+                  </div>
+                </article>
+              </li>
+              <li class="swiper-slide">
+                <article class="format-card">
+                  <img class="format-card__image" src="./images/handlebar-format.jpg" alt="Handlebar format" />
+                  <h3 class="format-card__title" lang="en">Handlebar</h3>
+                  <div class="format-card__text">
+                    <p>Площа: до 15 м2</p>
+                    <p>Меню: найпопулярніші позиції меню</p>
+                    <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                    <p>Посадкові місця: відсутні</p>
+                  </div>
+                </article>
+              </li>
+              <li class="swiper-slide">
+                <article class="format-card">
+                  <img class="format-card__image" src="./images/walrus-format.jpg" alt="Walrus format" />
+                  <h3 class="format-card__title" lang="en">Walrus</h3>
+                  <div class="format-card__text">
+                    <p>Площа: до 120 м2</p>
+                    <p>Меню: розширене меню</p>
+                    <p>
+                      Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                      офіціанти-різнороби
+                    </p>
+                    <p>Посадкові місця: є</p>
+                  </div>
+                </article>
+              </li>
+              <li class="swiper-slide">
+                <article class="format-card">
+                  <img class="format-card__image" src="./images/horseshoe-format.jpg" alt="Horseshoe format" />
+                  <h3 class="format-card__title" lang="en">Horseshoe</h3>
+                  <div class="format-card__text">
+                    <p>Площа: до 25 м2</p>
+                    <p>Меню: найпопулярніші позиції меню</p>
+                    <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                    <p>Посадкові місця: відсутні</p>
+                  </div>
+                </article>
+              </li>
+              <li class="swiper-slide">
+                <article class="format-card">
+                  <img class="format-card__image" src="./images/handlebar-format.jpg" alt="Handlebar format" />
+                  <h3 class="format-card__title" lang="en">Handlebar</h3>
+                  <div class="format-card__text">
+                    <p>Площа: до 15 м2</p>
+                    <p>Меню: найпопулярніші позиції меню</p>
+                    <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                    <p>Посадкові місця: відсутні</p>
+                  </div>
+                </article>
+              </li>
+            </ul>
+            <div class="pagination">
+              <span class="pagination__button"></span>
+            </div>
+          </div>
+          <button class="formats-section__button carusel-button next" type="button">
             <svg width="16" height="16">
               <use href="./images/icons.svg#icon-arrow"></use>
             </svg>
@@ -205,18 +250,15 @@
                 <label class="input__label visualy-hidden" for="user-name">Ім'я</label>
                 <input class="input__control" type="text" id="user-name" name="user-name" placeholder="Ім'я" />
               </div>
-
               <div class="contact-section__form-field input">
                 <label class="input__label visualy-hidden" for="user-tel">Телефон</label>
                 <input class="input__control" type="tel" id="user-tel" name="user-tel" placeholder="Телефон" />
               </div>
-
               <div class="contact-section__form-field input">
                 <label class="input__label visualy-hidden" for="user-email">Електронна пошта</label>
                 <input class="input__control" type="email" id="user-email" name="user-email"
                   placeholder="Електронна пошта" />
               </div>
-
               <button class="contact-section__button button" type="submit">
                 Замовити дзвінок
               </button>
@@ -235,98 +277,101 @@
   </main>
   <footer class="footer">
     <div class="container">
-      <div class="footer-container">
-        <nav class="footer-nav">
-          <div class="footer-logo">
+      <div class="footer__container">
+        <nav class="footer__nav">
+          <div class="footer__logo">
             <a href="/">
               <img src="./images/logo.svg" alt="логотип сучасної пекарні" />
             </a>
           </div>
-          <ul class="footer-menu">
-            <li>
+          <ul class="footer__menu">
+            <li class="footer__link">
               <a class="link" href="#traditions-section">Наші традиції</a>
             </li>
-            <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
-            <li><a class="link" href="#formats-section">Формати</a></li>
-            <li><a class="link" href="#contacts-section">Контакти</a></li>
+            <li class="footer__link"><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+            <li class="footer__link"><a class="link" href="#formats-section">Формати</a></li>
+            <li class="footer__link"><a class="link" href="#contacts-section">Контакти</a></li>
           </ul>
         </nav>
-        <address class="footer-address">
-          <ul class="address-list">
-            <li>
-              <a class="address-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a>
-            </li>
-            <li>
-              <a class="address-link" href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
-            </li>
-            <li>
-              <a class="address-link" href="https://maps.app.goo.gl/tM6y125hoMKMbh6VA" target="_blank">Україна, м. Київ,
-                вул. Січових Стрільців 54
-              </a>
-            </li>
-            <li>
+        <address class="footer__address">
+          <div class="footer__contacts">
+            <ul class="footer__address-list">
+              <li class="footer__link">
+                <a class="footer__address-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a>
+              </li>
+              <li class="footer__link">
+                <a class="footer__address-link" href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+              </li>
+              <li class="footer__link">
+                <a class="footer__address-link" href="https://maps.app.goo.gl/tM6y125hoMKMbh6VA"
+                  target="_blank">Україна,
+                  м. Київ,
+                  вул. Січових Стрільців 54
+                </a>
+              </li>
+            </ul>
+            <div class="footer__social">
               <a href="#">
-                <svg class="address-icon" width="32" height="32">
+                <svg class="footer__address-icon" width="32" height="32">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
-            </li>
-            <li>
               <a href="#">
-                <svg class="address-icon" width="32" height="32">
+                <svg class="footer__address-icon" width="32" height="32">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
-            </li>
-          </ul>
-          <div class="address-info">
-            <a class="address-link" href="#" target="_blank">Політика конфіденційності
+            </div>
+          </div>
+          <div class="footer__address-info">
+            <a class="footer__address-link" href="#" target="_blank">Політика конфіденційності
             </a>
-            <p class="address-copyright">&copy; 2022 Дані захищені</p>
+            <p class="footer__address-copyright">&copy; 2022 Дані захищені</p>
           </div>
         </address>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
-    <div class="backdrop is-hidden">
-      <div class="modal">
-        <h2>Замовити дзвінок</h2>
-        <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
-        <button class="modal__btn-close modal-btn-close" type="button">
-          close
+  <div class="backdrop is-hidden">
+    <div class="modal">
+      <h2>Замовити дзвінок</h2>
+      <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
+      <button class="modal__btn-close modal-btn-close" type="button"></button>
+      <form name="modal-form" autocomplete="off">
+        <div class="modal__form-field input">
+          <label class="input__label visualy-hidden" for="user-name">Ім'я</label>
+          <input class="input__control" type="text" id="user-name" name="user-name" placeholder="Ім'я" required />
+        </div>
+
+        <div class="modal__form-field input">
+          <label class="input__label visualy-hidden" for="user-tel">Телефон</label>
+          <input class="input__control" type="tel" id="user-tel" name="user-tel" placeholder="Телефон" required
+            pattern="^\+[0-9]{12}" />
+        </div>
+
+        <div class="modal__form-field input">
+          <label class="input__label visualy-hidden" for="user-email">Електронна пошта</label>
+          <input class="input__control" type="email" id="user-email" name="user-email" placeholder="Електронна пошта"
+            required />
+        </div>
+
+        <button class="modal__button button" type="submit">
+          Замовити дзвінок
         </button>
-        <form name="modal-form" autocomplete="off">
-          <div class="modal__form-field input">
-            <label class="input__label visualy-hidden" for="user-name">Ім'я</label>
-            <input class="input__control" type="text" id="user-name" name="user-name" placeholder="Ім'я" required />
-          </div>
-
-          <div class="modal__form-field input">
-            <label class="input__label visualy-hidden" for="user-tel">Телефон</label>
-            <input class="input__control" type="tel" id="user-tel" name="user-tel" placeholder="Телефон" required
-              pattern="^\+[0-9]{12}" />
-          </div>
-
-          <div class="modal__form-field input">
-            <label class="input__label visualy-hidden" for="user-email">Електронна пошта</label>
-            <input class="input__control" type="email" id="user-email" name="user-email" placeholder="Електронна пошта"
-              required />
-          </div>
-
-          <button class="modal__button button" type="submit">
-            Замовити дзвінок
-          </button>
-          <p class="form-terms">
-            Натискаючи на кнопку я погоджуюсь
-            <a class="form-terms-link" href="#">з політикою конфіденційності</a>
-          </p>
-        </form>
-      </div>
+        <p class="form-terms">
+          Натискаючи на кнопку я погоджуюсь
+          <a class="form-terms-link" href="#">з політикою конфіденційності</a>
+        </p>
+      </form>
     </div>
+  </div>
 
-    <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+  <script src="./js/modal.js"></script>
+  <script src="./js/mobile-menu.js"></script>
+  <script src="./js/format-slider.js"></script>
 </body>
 
 </html>
