update to module#19

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <h2 class="contact-section__title section__title">
               Приєднуйся до мережі пекарень
             </h2>
-            <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+            <p class="contact-section__description">Заповни форму, щоб ми звʼязались з тобою!</p>
             <form name="contact-form" autocomplete="off">
               <div class="contact-section__form-field input">
                 <label class="input__label visualy-hidden" for="user-name">Ім'я</label>
